Use tighter z-index to prevent issues with other elements

--- a/src/client/sass/contact.scss
+++ b/src/client/sass/contact.scss
@@ -28,7 +28,7 @@
       padding: 6px 8px;
       width: 50%;
       height: 100%;
-      z-index:10;
+      z-index: 5;
     }
 
     .slider {
